# payload_extract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_darwin.sh
.github/workflows/: build-payload_extract.yml
cmake/: check.cmake  llvm-mingw.cmake
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  libbspatch.cmake  libbz2.cmake  libfec_rs.cmake  libprotobuf-cpp-full.cmake
src/lib/libpayload/: CMakeLists.txt  Decompress.cpp  FileWriter.cpp  HttpDownload.cpp  PayloadHeader.cpp  PayloadInfo.cpp  PayloadParse.cpp  UrlPayloadInfo.cpp  ZipParse.cpp  io.cpp
src/lib/libpayload/config/: libpayload_config.h.in
src/lib/libpayload/include/payload/: ExtractConfig.h  FileWriter.h  HttpDownload.h  LogBase.h  PartitionInfo.h  PartitionWriter.h  PayloadDefs.h  PayloadHeader.h  PayloadInfo.h  PayloadParser.h  Utils.h  ZipParser.h  update_metadata.pb.h
src/lib/libpayload/include/payload/common/: Buffer.hpp  defs.h  io.h  ioDefs.h
src/lib/libpayload/include/payload/httpDownloadImpl/: CprHttpDownload.h  HttpUtils.h
src/lib/libpayload/include/payload/mman/: mman.h  mmap.hpp
src/lib/libpayload/include/payload/verify/: VerifyInfo.h  VerifyWriter.h
src/lib/libpayload/payload/: BinUtils.h  Decompress.h  ExtractConfig.cpp  FileWriter.cpp  FileWriter.h  HttpDownload.cpp  HttpDownload.h  HttpUtils.h  PartitionInfo.cpp  PartitionWriter.cpp  PayloadFileInfo.h  PayloadHeader.cpp  PayloadHeader.h  PayloadInfo.cpp  PayloadInfo.h  PayloadManifest.h  PayloadParse.h  PayloadParser.cpp  UrlPayloadInfo.cpp  Utils.h  ZipParse.h  ZipParser.cpp  defs.h  endian.h  io.h  threadpool.h  update_metadata.pb.cc
src/lib/libpayload/payload/common/: LogProgress.h  defs.h  io.cpp  io.h  mmap.hpp  threadpool.h
src/lib/libpayload/payload/decompress/: Decompress.cpp  Decompress.h
src/lib/libpayload/payload/httpDownloadImpl/: CprHttpDownload.cpp
src/lib/libpayload/payload/mman/: mman.c
src/lib/libpayload/payload/verify/: VerifyInfo.cpp  VerifyWriter.cpp  ecc.h  sha256.cpp  sha256.h  sha256Utils.h
src/lib/patch/: libbspatch_file.cc.patch
src/payload_extract/: CMakeLists.txt  CprHttpDownload.cpp  ExtractFileNode.cpp  ExtractOperation.cpp  RemoteUpdater.cpp  main.cpp
src/payload_extract/include/: CprHttpDownload.h  ExtractFileNode.h  ExtractOperation.h  HttpUtils.h  RemoteUpdater.h
